fix(itemDropdown): add text overflow handling for item value display

--- a/app/_components/SideBar/Edit/Item.module.scss
+++ b/app/_components/SideBar/Edit/Item.module.scss
@@ -72,6 +72,13 @@
       display: flex;
       align-items: center;
       gap: 0.5rem;
+
+      p {
+         max-width: 5.8rem;
+         white-space: nowrap;
+         overflow: hidden;
+         text-overflow: ellipsis;
+      }
    }
 }
 
